--- a/.github/workflows/main_tailadmin-webapp.yml
+++ b/.github/workflows/main_tailadmin-webapp.yml
@@ -50,7 +50,7 @@ jobs:
           name: node-app
 
       - name: unzip artifact for deployment
-        run: Expand-Archive release.zip -DestinationPath .
+        run: unzip release.zip -DestinationPath .
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
